bk_ida/sjengida/c2/eval
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/eval/src/eval.c:1282:6: error: use of undeclared identifier 'dword_66759C'
if ( dword_66759C[v19] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/eval/src/eval.c:1356:6: error: use of undeclared identifier 'dword_66759C'
if ( dword_66759C[v39] ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/eval/src/obj/eval.o] Error 1
